infrastructure/dapr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "dapr-dashboard-ingress"
  namespace: dapr-system
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: global-issuer
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - dapr.glegal.local
      secretName: dapr-dashboard-cert
  rules:
    - host: "dapr.glegal.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "dapr-dashboard"
                port:
                  number: 8080
